Introduce intersectionArea methods
This makes it possible to determine the area of intersection for two ROIs or Geometries, *possibly* without doing an expensive intersection calculation. We can also use this to calculate IoU.